--- a/package.json
+++ b/package.json
@@ -1,9 +1,52 @@
 {
 	"name": "bnd-examples",
 	"dependencies": {
-		"bnd": "0.0.28",
-		"bnd-service-driver-http": "0.0.5",
-		"bnd-service-provider-http": "0.0.5"
+		"babel": "^6.23.0",
+		"babel-cli": "^6.24.0",
+		"babel-loader": "^6.4.1",
+		"babel-plugin-transform-runtime": "^6.23.0",
+		"babel-polyfill": "^6.23.0",
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-es2016": "^6.24.1",
+		"babel-preset-react": "^6.24.1",
+		"babel-preset-react-hmre": "^1.1.1",
+		"babel-preset-stage-0": "^6.24.1",
+		"babel-register": "^6.24.1",
+		"bnd": "0.0.37",
+		"bnd-service-driver-http": "0.0.19",
+		"bnd-service-provider-http": "*",
+		"css-loader": "^0.28.0",
+		"echarts": "^3.5.1",
+		"eventsource-polyfill": "^0.9.6",
+		"extract-text-webpack-plugin": "^2.1.0",
+		"file-loader": "^0.10.1",
+		"force-case-sensitivity-webpack-plugin": "^0.2.1",
+		"imap": "^0.8.19",
+		"isomorphic-fetch": "^2.2.1",
+		"koa": "^2.2.0",
+		"koa-formidable": "^1.1.0",
+		"koa-logger": "^3.0.0",
+		"koa-router": "^7.2.0",
+		"koa-static": "^3.0.0",
+		"koa-webpack-middleware": "^1.0.5",
+		"koa2-cors": "^2.0.3",
+		"less": "^2.7.2",
+		"less-loader": "^4.0.2",
+		"react": "^15.5.4",
+		"react-dom": "^15.5.4",
+		"react-redux": "^5.0.3",
+		"react-router": "^4.1.1",
+		"react-router-dom": "^4.0.0",
+		"react-router-redux": "^5.0.0-alpha.4",
+		"react-uikits": "git+https://github.com/jerryshew/react-uikits.git",
+		"redux": "^3.6.0",
+		"redux-logger": "^2.10.2",
+		"redux-thunk": "^2.2.0",
+		"request": "^2.81.0",
+		"style-loader": "^0.16.1",
+		"underscore": "^1.8.3",
+		"url-loader": "^0.5.8",
+		"webpack": "^2.6.1"
 	},
 	"repository": "git@github.com:lyalls/BND-Examples.git"
 }
