Example can work

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
 		"babel-preset-react-hmre": "^1.1.1",
 		"babel-preset-stage-0": "^6.24.1",
 		"babel-register": "^6.24.1",
-		"bnd": "0.0.37",
-		"bnd-service-driver-http": "0.0.19",
-		"bnd-service-provider-http": "*",
+		"bnd": "latest",
+		"bnd-service-driver-http": "latest",
+		"bnd-service-provider-http": "latest",
 		"css-loader": "^0.28.0",
 		"echarts": "^3.5.1",
 		"eventsource-polyfill": "^0.9.6",
