--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"babel-register": "^6.24.1",
 		"bnd": "latest",
 		"bnd-service-driver-http": "latest",
-		"bnd-service-provider-http": "^0.1.1",
+		"bnd-service-provider-http": "latest",
 		"css-loader": "^0.28.0",
 		"echarts": "^3.5.1",
 		"eventsource-polyfill": "^0.9.6",
