--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
 		"babel-preset-react-hmre": "^1.1.1",
 		"babel-preset-stage-0": "^6.24.1",
 		"babel-register": "^6.24.1",
-		"bnd": "latest",
-		"bnd-service-driver-http": "latest",
-		"bnd-service-provider-http": "^0.1.1",
+		"bnd": "*",
+		"bnd-service-driver-http": "*",
+		"bnd-service-provider-http": "*",
 		"css-loader": "^0.28.0",
 		"echarts": "^3.5.1",
 		"eventsource-polyfill": "^0.9.6",
